<resources>
    <string name="app_name">Taller_2_2020</string>
    <!-- INTERFAZ REGISTRO  -->
    <string name="registro_titulo">Registro</string>
    <string name="registro_rut">Rut</string>
    <string name="registro_nombre">Nombre</string>
    <string name="registro_apellido">Apellido</string>
    <string name="registro_genero">Seleccione un genero</string>
    <string name="registro_edad">Edad</string>
    <string name="registro_fechaNac">Fecha Nacimiento</string>
    <string name="registro_btn_registrarse">Registrarse</string>
    <!-- INTERFAZ LOGIN  -->
    <string name="login_titulo">Bienvenido</string>
    <string name="login_btn_login">Iniciar Sesión</string>
    <string name="login_btn_registrarse">Registrarse</string>
    <!-- ERRORES  -->
    <!-- GLOBALES  -->
    <string name="global_rut">Rut</string>
    <string name="global_password">Contraseña</string>
    <string name="global_rpassword">Repetir contraseña</string>

</resources>